Replace accidental buff stacking with one buff per stat
Two potions of the same stat multiplied together, so two speed potions
gave 2.25x speed. Only the strongest buff on a stat is now active: a
stronger potion replaces a weaker one, the same potion refreshes its
timer, and a weaker potion is rejected so it is not wasted.

The unbuffed base attack is also read when a buff starts rather than
once in create(), so a base attack changed elsewhere is not clobbered
when the buff expires. getDamageMultiplier() exposes the damage buff for
the weapon damage pipeline.